Adjust email verification
